4128: revised styling - fixed problem with wrapping title and formatting boxes.

--- a/docs/mods/_core/editor/css/editor.css
+++ b/docs/mods/_core/editor/css/editor.css
@@ -16,3 +16,7 @@
 .bottom-margin {
     margin-bottom: 1em;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
